--- a/GuiApplication/GuiApplication.ui
+++ b/GuiApplication/GuiApplication.ui
@@ -137,22 +137,5 @@
  <resources>
   <include location="GuiApplication.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>closeButton</sender>
-   <signal>clicked()</signal>
-   <receiver>GuiApplicationClass</receiver>
-   <slot>close()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>635</x>
-     <y>440</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>416</x>
-     <y>258</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
 </ui>
