--- a/GuiApplication/FormHomePage.ui
+++ b/GuiApplication/FormHomePage.ui
@@ -1,23 +1,70 @@
-<UI version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>FormHomePage</class>
- <widget class="QWidget" name="FormHomePage" >
-  <property name="objectName" >
-   <string notr="true">FormHomePage</string>
-  </property>
-  <property name="geometry" >
+ <widget class="QWidget" name="FormHomePage">
+  <property name="geometry">
    <rect>
-	<x>0</x>
-	<y>0</y>
-	<width>400</width>
-	<height>300</height>
+    <x>0</x>
+    <y>0</y>
+    <width>960</width>
+    <height>573</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>FormHomePage</string>
   </property>
+  <widget class="QTableWidget" name="tableWidget">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>180</y>
+     <width>821</width>
+     <height>192</height>
+    </rect>
+   </property>
+   <column>
+    <property name="text">
+     <string>学号</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>姓名</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>性别</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>C语言课程设计</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>高等数学成绩</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>大学英语成绩</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>出生日期</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>年龄</string>
+    </property>
+   </column>
+  </widget>
  </widget>
- <layoutDefault spacing="6" margin="11" />
- <pixmapfunction></pixmapfunction>
+ <layoutdefault spacing="6" margin="11"/>
  <resources/>
  <connections/>
-</UI>
+</ui>
