--- a/GuiApplication/StudentMenu.ui
+++ b/GuiApplication/StudentMenu.ui
@@ -32,7 +32,7 @@
     <bool>true</bool>
    </property>
   </widget>
-  <widget class="QPushButton" name="EnterButton">
+  <widget class="QPushButton" name="EntryButton">
    <property name="geometry">
     <rect>
      <x>270</x>
