--- a/GuiApplication/FormHomePage.ui
+++ b/GuiApplication/FormHomePage.ui
@@ -6,62 +6,35 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>872</width>
-    <height>278</height>
+    <width>904</width>
+    <height>462</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>FormHomePage</string>
   </property>
-  <widget class="QTableWidget" name="tableWidget">
+  <widget class="QTableView" name="tableView">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>30</y>
-     <width>821</width>
-     <height>192</height>
+     <x>10</x>
+     <y>10</y>
+     <width>881</width>
+     <height>371</height>
     </rect>
    </property>
-   <column>
-    <property name="text">
-     <string>学号</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>姓名</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>性别</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>C语言课程设计</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>高等数学成绩</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>大学英语成绩</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>出生日期</string>
-    </property>
-   </column>
-   <column>
-    <property name="text">
-     <string>年龄</string>
-    </property>
-   </column>
+  </widget>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>780</x>
+     <y>420</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>PushButton</string>
+   </property>
   </widget>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
